translated the template

--- a/front/cover.tex
+++ b/front/cover.tex
@@ -24,7 +24,7 @@
         % author
         \vspace{2cm}
         \Large
-        propusă de
+        proposed by
         
         \vspace{0.5cm}
         \LARGE
@@ -33,12 +33,12 @@
         % session
         \vfill
         \Large
-        \textbf{Sesiunea:} \session
+        \textbf{Session:} \session
         
         % scientific coordinator
         \vspace{2cm}
         \Large
-        Coordonator științific
+        Scientific coordinator
         
         \vspace{0.5cm}
         \LARGE
