--- a/front/macros.tex
+++ b/front/macros.tex
@@ -1,22 +1,22 @@
-\newcommand{\university}    {Universitatea "Alexandru-Ioan Cuza" din Iași}
-\newcommand{\universityg}   {Universității "Alexandru-Ioan Cuza" din Iași} % genitive
-\newcommand{\faculty}       {Facultatea de informatică}
-\newcommand{\facultyg}      {Facultății de informatică} % genitive
-\newcommand{\speciality}    {informatică}
-\newcommand{\promotion}     {2018}                                  %<---------
+\newcommand{\university}    {"Alexandru-Ioan Cuza" University Iași}
+\newcommand{\universityg}   {of "Alexandru-Ioan Cuza" University Iași} % genitive
+\newcommand{\faculty}       {Faculty of Computer Science}
+\newcommand{\facultyg}      {of Faculty of Computer Science} % genitive
+\newcommand{\speciality}    {Computer Science}
+\newcommand{\promotion}     {2025}                                  %<---------
 
-\newcommand{\thesistype}    {Lucrare de licență}
-\newcommand{\thesistitle}   {Aspecte computaționale în biologie}    %<---------
+\newcommand{\thesistype}    {Bachelor's thesis}
+\newcommand{\thesistitle}   {Consequences of using temporary variables in RFID authentication}    %<---------
 
-\newcommand{\authorlast}    {Popescu}                               %<---------
-\newcommand{\authorfirst}   {Andrei-Ionuț}
+\newcommand{\authorlast}    {Patrașcan}                               %<---------
+\newcommand{\authorfirst}   {Andrei-Alexandru}
 \newcommand{\authornamefl}  {\authorfirst \space \authorlast} % first name first
 \newcommand{\authornamelf}  {\authorlast \space \authorfirst} % last name first
-\newcommand{\authorbirth}   {01 ianuarie 2018}                      %<---------
-\newcommand{\authoraddress} {România, jud. Iași, mun. Iași, calea Buzăului, nr. 25, bl. A, et. 5, ap. 45} %<---------
-\newcommand{\authorcnp}     {1234567891234}                         %<---------
+\newcommand{\authorbirth}   {22 march 1999}                      %<---------
+\newcommand{\authoraddress} {România, jud. Bacău, com. Filipești, sat Hârlești, str. Zorilor, nr. 180} %<---------
+\newcommand{\authorcnp}     {1990322046190}                         %<---------
 
-\newcommand{\session}       {februarie, 2019}                       %<---------
-\newcommand{\coordinator}   {Conf. Dr. Ionescu Ionel}               %<---------
+\newcommand{\session}       {june, 2025}                       %<---------
+\newcommand{\coordinator}   {Prof. Dr. Țiplea Ferucio Laurențiu}               %<---------
 
 \newcommand{\dottedline}    {............................}
