--- a/main.tex
+++ b/main.tex
@@ -74,6 +74,7 @@
     \input{chapters/chapter1}
     \input{chapters/chapter2}
     \input{chapters/chapter3}
+    \input{chapters/chapter4}
     
     \input{chapters/conclusions}
     \input{chapters/bibliography}
