first 2 schemes demonstrations

--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,9 @@
 \usepackage{changepage}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{tikz}
+\usetikzlibrary{arrows.meta, positioning}
+\usepackage{caption}
 
 % includes options
 \geometry{  a4paper,            % scientific thesis standard
