BAN logic and future research

--- a/main.tex
+++ b/main.tex
@@ -36,6 +36,8 @@
 \usepackage{tikz}
 \usetikzlibrary{arrows.meta, positioning}
 \usepackage{caption}
+\usepackage{mathtools}
+\usepackage{amssymb}
 
 % includes options
 \geometry{  a4paper,            % scientific thesis standard
