changed the motivation, intro and AI use

--- a/main.tex
+++ b/main.tex
@@ -41,8 +41,8 @@
 
 % includes options
 \geometry{  a4paper,            % scientific thesis standard
-            left=3cm,
-            right=2cm,
+            left=2.5cm,
+            right=2.5cm,
             top=2cm,
             bottom=2cm,
  }
@@ -75,6 +75,7 @@
     
     \input{chapters/motivation}
     \input{chapters/introduction}
+    \input{chapters/use_of_AI}
     \input{chapters/chapter1}
     \input{chapters/chapter2}
     \input{chapters/chapter3}
