--- a/front/declaration2.tex
+++ b/front/declaration2.tex
@@ -1,20 +1,26 @@
 \vspace*{\fill}
+
+\begin{flushright}
+    Anexa III \\
+\end{flushright}
+
+\vspace{1cm}
 \begin{center}
     \large
     \textbf{Declarație de consimțământ}
 \end{center}
 
-Prin prezenta declar că sunt de acord ca lucrarea de licență cu titlul \textbf{\thesistitle}, codul sursă al programelor și celelalte 
-conținuturi (grafice, multimedia, date de test, etc.) care însoțesc această lucrare să fie utilizate în cadrul Facultății de informatică.
+Prin prezenta declar că sunt de acord ca lucrarea de licență cu titlul „\textbf{\thesistitle}”, codul sursă al programelor și celelalte 
+conținuturi (grafice, multimedia, date de test, etc.) care însoțesc această lucrare să fie utilizate în cadrul Facultății de Informatică.
 
-De asemenea, sunt de acord ca Facultatea de informatică de la Universitatea ”Alexandru-Ioan Cuza” din Iași, să utilizeze, modifice, 
+De asemenea, sunt de acord ca Facultatea de Informatică de la Universitatea „Alexandru-Ioan Cuza” din Iași, să utilizeze, modifice, 
 reproducă și să distribuie în scopuri necomerciale programele-calculator, format executabil și sursă, realizate de mine în cadrul 
 prezentei lucrări de licență.
 
 \begin{flushright}
     Absolvent \textbf{\authornamefl} \\
     \vspace{0.5cm}
-    Data: \dottedline \hspace{6cm} Semnătura: \dottedline
+    Iași, data: \dottedline \hspace{5cm} Semnătura: \dottedline
 \end{flushright}
 \vspace*{\fill}
 \pagebreak
