--- a/front/declaration1.tex
+++ b/front/declaration1.tex
@@ -1,8 +1,9 @@
 \vspace*{\fill}
 
 \begin{flushright}
+    Anexa II \\
     Avizat, \\
-    Îndrumător lucrare de licență, \\
+    Îndrumător Lucrare de Licență \\
     \coordinator. \\
     Data: \dottedline \hspace{1cm} Semnătura: \dottedline
 \end{flushright}
@@ -10,22 +11,24 @@
 \vspace{1cm}
 \begin{center}
     \large
-    \textbf{Declarație privind originalitatea conținutului lucrării de licență}
+    \textbf{Declarație privind autenticitatea conținutului lucrării de licență}
 \end{center}
 
 Subsemnatul \textbf{\authornamelf} domiciliat în \textbf{\authoraddress}, născut la data de \textbf{\authorbirth}, identificat prin 
-CNP \textbf{\authorcnp}, absolvent al Facultății de informatică, \textbf{Facultatea de informatică} specializarea \textbf{informatică}, 
-promoția \promotion, declar pe propria răspundere cunoscând consecințele falsului în declarații în sensul art. 326 din Noul Cod Penal și 
+CNP \textbf{\authorcnp}, absolvent al \textbf{Universității „Alexandru Ioan Cuza” din Iași, Facultatea de Informatică} specializarea \textbf{Informatică}, 
+promoția \promotion, declar pe propria răspundere, cunoscând consecințele falsului în declarații în sensul art. 326 din Noul Cod Penal și 
 dispozițiile Legii Educației Naționale nr. 1/2011 art. 143 al. 4 și 5 referitoare la plagiat, că lucrarea de licență cu titlul 
-\textbf{\thesistitle} elaborată sub îndrumarea domnului \textbf{\coordinator}, pe care urmează să o susțin în fața comisiei este 
-originală, îmi aparține și îmi asum conținutul său în întregime.
+\textbf{\thesistitle} elaborată sub îndrumarea dlui \textbf{\coordinator}, este autentică, îmi aparține și îmi asum conținutul său 
+în întregime.
 
 De asemenea, declar că sunt de acord ca lucrarea mea de licență să fie verificată prin orice modalitate legală pentru confirmarea 
-originalității, consimțind inclusiv la introducerea conținutului ei într-o bază de date în acest scop.
+autenticității, consimțind inclusiv la introducerea conținutului său într-o bază de date în acest scop. Declar că lucrarea de față 
+are exact același conținut cu lucrarea în format electronic pe care profesorul îndrumător a verificat-o prin intermediul software-ului 
+de detectare a plagiatului. 
 
 Am luat la cunoștință despre faptul că este interzisă comercializarea de lucrări științifice în vederea facilitării falsificării de 
-către cumpărător a calității de autor al unei lucrări de licență, de diplomă sau de disertație și în acest sens, declar pe proprie 
-răspundere că lucrarea de față nu a fost copiată ci reprezintă rodul cercetării pe care am întreprins-o.
+către cumpărător a calității de autor al unei lucrări de licență, de diplomă sau de disertație și în acest sens declar pe proprie 
+răspundere că lucrarea de față nu a fost copiată, ci reprezintă rodul cercetării pe care am întreprins-o.
 
 \begin{flushright}
     Data: \dottedline \hspace{6cm} Semnătura: \dottedline
